<?xml version="1.0" encoding="utf-8" ?>
<package>
    <name>cqt</name>
    <version>0.1.0</version>
    <description>
        cqt
    </description>
    <license>BSD</license>
    <maintainer email="dongshan_7@163.com">dong3</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <build_depend>rviz</build_depend>
    <run_depend>rviz</run_depend>
    <build_depend>qtbase5-dev</build_depend>
    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>
</package>